--- a/src/pages/gallery/gallery.html
+++ b/src/pages/gallery/gallery.html
@@ -1,7 +1,7 @@
 <ion-header #head color="dark">
 
     <ion-navbar color="dark">
-        <ion-buttons start>
+        <ion-buttons start class="theMenu">
             <button ion-button icon-only menuToggle>
                 <ion-icon name="menu"></ion-icon>
             </button>
@@ -9,14 +9,18 @@
 
 
         <ion-title>My Gallery</ion-title>
+
+        <ion-buttons end>
+            <button (click)="moreOpt()" ion-button><ion-icon name="more"></ion-icon></button>
+        </ion-buttons>
     </ion-navbar>
 
 </ion-header>
 
 
-<ion-content autohide [header]="head">
-    <div class="rot">
-      </div>
+<ion-content autohide [header]="head" class="theBody">
+    <!-- <div class="rot">
+      </div> -->
   <div id="scroll-content">
 
       <ion-grid no-padding>
@@ -140,13 +144,13 @@
       </ion-grid>
     
   </div>
-  <ion-fab top right edge>
-        <button ion-fab mini><ion-icon name="add"></ion-icon></button>
-        <ion-fab-list>
-            <button ion-fab (click)="profile()">
+  <ion-fab bottom right>
+        <button ion-fab mini color="dark"><ion-icon name="add"></ion-icon></button>
+        <ion-fab-list side="left">
+            <button ion-fab color="dark" (click)="profile()">
                 <ion-icon name="person"></ion-icon>
             </button>
-            <button ion-fab (click)="upload()">
+            <button ion-fab (click)="upload()" color="dark">
                 <ion-icon name="add"></ion-icon>
             </button>
         </ion-fab-list>
