--- a/src/pages/upload-image/upload-image.html
+++ b/src/pages/upload-image/upload-image.html
@@ -2,6 +2,9 @@
 <ion-header>
 
   <ion-navbar>
+    <ion-buttons start>
+      <button (click)="dismissModal()" ion-button clear icon-only><ion-icon name="close"></ion-icon></button>
+    </ion-buttons>
     <ion-title>uploadModal</ion-title>
   </ion-navbar>
  
@@ -10,9 +13,9 @@
  
  <ion-content padding>
   <ion-card>
-    <ion-item class="item item-trns text-center">
+
         <input type="file" (change)="insertvid($event)">
-    </ion-item>
+
    </ion-card>
  
     <div class="textFields">
