--- a/src/pages/popover/popover.html
+++ b/src/pages/popover/popover.html
@@ -15,4 +15,10 @@
 
 <ion-content padding>
 
+  <button ion-button clear>
+    Upload
+  </button>
+  <button ion-button clear>
+    <ion-icon start name="person"></ion-icon> Profile
+  </button>
 </ion-content>
