Sthembiso CSS Changes to Profile Page

--- a/src/pages/upload-image/upload-image.html
+++ b/src/pages/upload-image/upload-image.html
@@ -12,9 +12,9 @@
  
  
  <ion-content padding>
-  <ion-card>
+  <ion-card class="uploadCard">
 
-        <input type="file" (change)="insertvid($event)">
+        <input class="inp" type="file" (change)="insertvid($event)">
 
    </ion-card>
  
